--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,6 @@
 spring.datasource.url: jdbc:h2:file:./camunda-h2-database
-
+max:
+  warriors: 100
 camunda.bpm.admin-user:
   id: demo
   password: demo
