--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,5 +2,8 @@ spring.datasource.url: jdbc:h2:file:./camunda-h2-database
 max:
   warriors: 100
 camunda.bpm.admin-user:
-  id: demo
-  password: demo
+  id: admin
+  password: admin
+spring:
+  main:
+    banner-mode: off
