--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,13 @@
 spring.datasource.url: jdbc:h2:file:./camunda-h2-database
+url: https://randomuser.me/api/
 max:
   warriors: 100
-camunda.bpm.admin-user:
-  id: admin
-  password: admin
+camunda:
+  bpm:
+    admin-user:
+      id: admin
+      password: admin
+    default-serialization-format: application/json
 spring:
   main:
     banner-mode: off
