--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
     <graalvm.version>23.0.3</graalvm.version>
+    <lombok.version>1.18.32</lombok.version>
   </properties>
 
   <dependencyManagement>
@@ -96,6 +97,12 @@
       <groupId>org.graalvm.js</groupId>
       <artifactId>js-scriptengine</artifactId>
       <version>${graalvm.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>${lombok.version}</version>
     </dependency>
   </dependencies>
 
